--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -51,6 +51,7 @@ body{
     .navLinksHeader li a:hover {
         color: white;
         text-decoration: underline;
+        cursor: pointer;
     }
     
     .Dark{
