--- a/src/Styles/BuyCards.css
+++ b/src/Styles/BuyCards.css
@@ -29,6 +29,7 @@ body {
     font-size: 28px;
     font-weight: lighter;
     margin: 0 8rem;
+    margin-bottom: 1rem;
   }
 
   .individuealType:hover {
