--- a/src/Styles/CardPokemon.css
+++ b/src/Styles/CardPokemon.css
@@ -8,10 +8,17 @@
     border-radius: 8px;
 }
 
+.cardContainer:hover{
+    background-color: #c4dcf7;
+    width: 306px;
+    height: 390px;
+}
+
 .nameLike{
     display: flex;
     justify-content: space-between;
     margin: 1rem 1.5rem;
+    align-items: center;
 }
 
 .imageContent{
@@ -34,6 +41,15 @@
     margin: 1rem 1.2rem;
 }
 
+.nameLike  h2{
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.pokeLikeRed{
+    color: red;
+}
+
 .idContent h3{
     color: #1A202C;
     display: flex;
@@ -49,4 +65,9 @@
     border: none;
     border-radius: 4px;
     font-weight: bold;
+}
+
+.idContent button:hover{
+    background-color: #0a51a9;
+    
 }
