--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -31,6 +31,7 @@ body{
         text-decoration: none;
         color: black;
         font-weight: bold;
+        cursor: pointer;
     }
     
     .aLinksDark{
